--- a/package.json
+++ b/package.json
@@ -9,10 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/bottom-tabs": "^7.1.3",
+    "@react-navigation/material-top-tabs": "^7.0.18",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.1.10",
+    "axios": "^1.7.8",
     "expo": "~52.0.11",
+    "expo-font": "^13.0.1",
+    "expo-splash-screen": "^0.29.13",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gif": "^1.0.3",
+    "react-native-pager-view": "^6.6.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-tab-view": "^4.0.5",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
